--- a/main.bib
+++ b/main.bib
@@ -6,6 +6,20 @@
   school = {TU delft}
 }
 
+@article{althamExactBayesianAnalysis1969,
+  title = {Exact {{Bayesian Analysis}} of a 2 x 2 {{Contingency Table}}, and {{Fisher}}'s "{{Exact}}" {{Significance Test}}},
+  author = {Altham, Patricia M. E.},
+  year = {1969},
+  journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
+  volume = {31},
+  number = {2},
+  eprint = {2984209},
+  eprinttype = {jstor},
+  pages = {261--269},
+  publisher = {[Royal Statistical Society, Oxford University Press]},
+  urldate = {2025-07-29}
+}
+
 @article{arnoldSequentiallyValidTests2023,
   title = {Sequentially Valid Tests for Forecast Calibration},
   author = {Arnold, Sebastian and Henzi, Alexander and Ziegel, Johanna F.},
@@ -50,6 +64,10 @@
   author = {Brinda, William David},
   year = {2018},
   school = {Yale University}
+}
+
+@article{CaseStudyBayesian,
+  title = {A {{Case Study}} on the {{Bayesian Analysis}} of 2 {\texttimes} 2 {{Tables}} with {{All Margins Fixed}}}
 }
 
 @misc{casgrainAnytimevalidSequentialTesting2023,
@@ -141,6 +159,42 @@
   pages = {205--237}
 }
 
+@phdthesis{deroosUniformlyGrowthrateOptimal2025,
+  title = {Uniformly Growth-Rate Optimal e-Variables for Composite Hypotheses Sharing a Sufficient {$\sigma$}-Algebra},
+  author = {{de Roos}, Dante},
+  year = {2025},
+  month = jul,
+  school = {Leiden University}
+}
+
+@article{diaconisConjugatePriorsExponential1979,
+  title = {Conjugate {{Priors}} for {{Exponential Families}}},
+  author = {Diaconis, Persi and Ylvisaker, Donald},
+  year = {1979},
+  month = mar,
+  journal = {The Annals of Statistics},
+  volume = {7},
+  number = {2},
+  pages = {269--281},
+  publisher = {Institute of Mathematical Statistics},
+  doi = {10.1214/aos/1176344611},
+  urldate = {2025-07-29}
+}
+
+@misc{fischerImprovingApproximateSequential2024,
+  title = {Improving the (Approximate) Sequential Probability Ratio Test by Avoiding Overshoot},
+  author = {Fischer, Lasse and Ramdas, Aaditya},
+  year = {2024},
+  month = oct,
+  number = {arXiv:2410.16076},
+  eprint = {2410.16076},
+  primaryclass = {stat},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2410.16076},
+  urldate = {2025-05-16},
+  archiveprefix = {arXiv}
+}
+
 @article{grunwaldAuthorsReplyDiscussion2024,
   title = {Authors' Reply to the Discussion of `Safe Testing'},
   author = {Gr{\"u}nwald, Peter and {de Heide}, Rianne and Koolen, Wouter},
@@ -152,6 +206,18 @@
   pages = {1163--1171},
   doi = {10.1093/jrsssb/qkae069},
   urldate = {2025-03-06}
+}
+
+@misc{grunwaldEPosterior2023,
+  title = {The {{E-Posterior}}},
+  author = {Gr{\"u}nwald, Peter},
+  year = {2023},
+  month = sep,
+  eprint = {2301.01335},
+  primaryclass = {math},
+  doi = {10.1098/rsta.2022.146},
+  urldate = {2025-05-22},
+  archiveprefix = {arXiv}
 }
 
 @article{grunwaldFastRatesGeneral2020,
@@ -221,6 +287,11 @@
   publisher = {arXiv},
   urldate = {2024-12-13},
   archiveprefix = {arXiv}
+}
+
+@article{grunwaldPictureThatSays,
+  title = {A {{Picture}} That {{Says A Lot}}},
+  author = {Grunwald, Peter}
 }
 
 @article{grunwaldSafeTesting2024,
@@ -304,6 +375,18 @@
   archiveprefix = {arXiv}
 }
 
+@article{hashemiBayesianAnalysisSingle1997,
+  title = {Bayesian {{Analysis}} for a {{Single}} 2{\texttimes}2 {{Table}}},
+  author = {Hashemi, Lobat and Nandram, Balgobin and Goldberg, Robert},
+  year = {1997},
+  journal = {Statistics in Medicine},
+  volume = {16},
+  number = {12},
+  pages = {1311--1328},
+  doi = {10.1002/(SICI)1097-0258(19970630)16:12<1311::AID-SIM568>3.0.CO;2-3},
+  urldate = {2025-07-29}
+}
+
 @article{heideWhyOptionalStopping2021,
   title = {Why Optional Stopping Can Be a Problem for {{Bayesians}}},
   author = {de Heide, Rianne and Gr{\"u}nwald, Peter D.},
@@ -383,6 +466,20 @@
   archiveprefix = {arXiv}
 }
 
+@article{johnsonUniformlyMostPowerful2013,
+  title = {Uniformly Most Powerful {{Bayesian}} Tests},
+  author = {Johnson, Valen E.},
+  year = {2013},
+  month = aug,
+  journal = {The Annals of Statistics},
+  volume = {41},
+  number = {4},
+  pages = {1716--1741},
+  publisher = {Institute of Mathematical Statistics},
+  doi = {10.1214/13-AOS1123},
+  urldate = {2025-07-29}
+}
+
 @misc{kirschElementaryProofFinettis2018,
   title = {An Elementary Proof of de {{Finetti}}'s {{Theorem}}},
   author = {Kirsch, Werner},
@@ -437,20 +534,6 @@
   urldate = {2024-12-12}
 }
 
-@misc{larssonNumeraireEvariableReverse2024,
-  title = {The Numeraire E-Variable and Reverse Information Projection},
-  author = {Larsson, Martin and Ramdas, Aaditya and Ruf, Johannes},
-  year = {2024},
-  month = apr,
-  number = {arXiv:2402.18810},
-  eprint = {2402.18810},
-  primaryclass = {math},
-  publisher = {arXiv},
-  doi = {10.48550/arXiv.2402.18810},
-  urldate = {2025-01-29},
-  archiveprefix = {arXiv}
-}
-
 @misc{larssonNumeraireEvariableReverse2025,
   title = {The Numeraire E-Variable and Reverse Information Projection},
   author = {Larsson, Martin and Ramdas, Aaditya and Ruf, Johannes},
@@ -462,6 +545,34 @@
   publisher = {arXiv},
   doi = {10.48550/arXiv.2402.18810},
   urldate = {2025-03-06},
+  archiveprefix = {arXiv}
+}
+
+@article{larssonNumeraireEvariableReverse2025a,
+  title = {The Numeraire E-Variable and Reverse Information Projection},
+  author = {Larsson, Martin and Ramdas, Aaditya and Ruf, Johannes},
+  year = {2025},
+  month = jun,
+  journal = {The Annals of Statistics},
+  volume = {53},
+  number = {3},
+  pages = {1015--1043},
+  publisher = {Institute of Mathematical Statistics},
+  doi = {10.1214/24-AOS2487},
+  urldate = {2025-08-15}
+}
+
+@misc{larssonTestingHypothesesGenerated2025,
+  title = {Testing Hypotheses Generated by Constraints},
+  author = {Larsson, Martin and Ramdas, Aaditya and Ruf, Johannes},
+  year = {2025},
+  month = jul,
+  number = {arXiv:2504.02974},
+  eprint = {2504.02974},
+  primaryclass = {math},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2504.02974},
+  urldate = {2025-08-15},
   archiveprefix = {arXiv}
 }
 
@@ -500,6 +611,47 @@ ISBN-10: 0599311037}
   archiveprefix = {OSF}
 }
 
+@article{marshallBayesianAnalysisCasecontrol1988,
+  title = {Bayesian Analysis of Case-control Studies},
+  author = {Marshall, R. J.},
+  year = {1988},
+  month = dec,
+  journal = {Statistics in Medicine},
+  volume = {7},
+  number = {12},
+  pages = {1223--1230},
+  doi = {10.1002/sim.4780071203},
+  urldate = {2025-07-29},
+  copyright = {http://onlinelibrary.wiley.com/termsAndConditions\#vor}
+}
+
+@misc{moniriUniversalInference2022,
+  title = {Universal {{Inference}}},
+  author = {Moniri, Behrad},
+  year = {2022},
+  month = apr
+}
+
+@article{myungModelSelectionNormalized2006,
+  title = {Model Selection by Normalized Maximum Likelihood},
+  author = {Myung, Jay I. and Navarro, Daniel J. and Pitt, Mark A.},
+  year = {2006},
+  month = apr,
+  journal = {Journal of Mathematical Psychology},
+  volume = {50},
+  number = {2},
+  pages = {167--179},
+  doi = {10.1016/j.jmp.2005.06.008},
+  urldate = {2025-07-30},
+  copyright = {https://www.elsevier.com/tdm/userlicense/1.0/}
+}
+
+@misc{NoteUniversalInference,
+  title = {A Note on Universal Inference - {{Tse}} - 2022 - {{Stat}} - {{Wiley Online Library}}},
+  urldate = {2025-07-31},
+  howpublished = {https://onlinelibrary.wiley.com/doi/full/10.1002/sta4.501}
+}
+
 @misc{perez-ortizEstatisticsGroupInvariance2023,
   title = {E-Statistics, Group Invariance and Anytime Valid Testing},
   author = {{P{\'e}rez-Ortiz}, Muriel Felipe and Lardy, Tyron and {de Heide}, Rianne and Gr{\"u}nwald, Peter},
@@ -530,11 +682,24 @@ ISBN-10: 0599311037}
   archiveprefix = {arXiv}
 }
 
+@article{perezAutomaticProperBayesian1994,
+  title = {An Automatic and Proper {{Bayesian}} Estimation Analysis of 2{\texttimes}2 Contingency Tables with One and Two Fixed Margins},
+  author = {P{\'e}rez, Mar{\'i}a-Egl{\'e}e},
+  year = {1994},
+  journal = {TEST: An Official Journal of the Spanish Society of Statistics and Operations Research},
+  volume = {3},
+  number = {2},
+  pages = {101--112},
+  publisher = {Springer \& Sociedad de Estad{\'i}stica e Investigaci{\'o}n Operativa},
+  urldate = {2025-07-30}
+}
+
 @inproceedings{pmlr-v206-turner23a,
   title = {Safe Sequential Testing and Effect Estimation in Stratified Count Data},
   booktitle = {Proceedings of the 26th International Conference on Artificial Intelligence and Statistics},
   author = {Turner, Rosanne and Grunwald, Peter},
-  year = {2023-04-25/2023-04-27},
+  year = {2023},
+  month = apr,
   series = {Proceedings of Machine Learning Research},
   volume = {206},
   eprint = {2302.11401},
@@ -638,6 +803,18 @@ ISBN-10: 0599311037}
   number = {1},
   doi = {10.1214/10-STS347},
   urldate = {2024-08-13}
+}
+
+@article{shaferWhatGameTheoreticStatistics,
+  title = {What Is {{Game-Theoretic Statistics}}?},
+  author = {Shafer, Glenn}
+}
+
+@misc{StatisticalAnalysisAdverse,
+  title = {{A Statistical Analysis of Adverse Impact of Employer Decisions}},
+  journal = {Portal de Peri{\'o}dicos da CAPES},
+  urldate = {2025-07-29},
+  howpublished = {https://www.periodicos.capes.gov.br/index.php/acervo/buscador.html?task=detalhes\&id=W4240048560}
 }
 
 @incollection{topsoeInformationTheoryService2007,
